--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Ethan Smith
 email: blog@ethansmith.io
 description: >- # this means to ignore newlines until "baseurl:"
   This blog is an outlet for my tech related thoughts and dreams.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://blog.ethansmith.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: N/A
 github_username:  ethanmsmith
